--- a/DataShare/src/jdbc.properties
+++ b/DataShare/src/jdbc.properties
@@ -1,5 +1,5 @@
 driverClassName=oracle.jdbc.OracleDriver
-url=jdbc:oracle:thin:@192.168.1.200:1521:jjmx
+url=jdbc:oracle:thin:@localhost:1521:orcl
 username=datashare
 password=datashare
  
