数据动态 管理

--- a/DataShare/WebRoot/WEB-INF/classes/.gitignore
+++ b/DataShare/WebRoot/WEB-INF/classes/.gitignore
@@ -1,3 +1,9 @@
+/META-INF/
 /com/
+/jdbc.properties
 /listener/
+/log4j.xml
 /org/
+/MysqlToOracle.class
+/SiteInfos.class
+/SqlServer2005Test.class
