--- a/DataShare/WebRoot/WEB-INF/Myjdbc.properties
+++ b/DataShare/WebRoot/WEB-INF/Myjdbc.properties
@@ -39,7 +39,11 @@ software=/software
 
 #网页转换的o文件（GNSS接收机网页）     放到ftp文件夹下，进行数据补录
 gnss_oLinux = /root/nfs/userFtp/admin/GNSS_O 
-gnss_oWin = G:/20170821/
+gnss_oWin = E\:/new/admin/GNSS_O 
+
+Share_oLinux = /root/nfs/userFtp/admin/Share_O
+Share_oWin = E:/new/admin/Share_O
+
 
 #在线数据整理 日志路径
 fileLogBaseNameLinux =/home/datashare/tomcat/apache-tomcat-6.0.45/webapps/headPut/
